--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 
     </div>
     <div class="copyright">
-        <p>Copyright © 2019. Все права защищены</p>
-        <p>Политика приватности</p>
+        <p>Copyright © 2019. Все права защищеныи и измененый</p>
+        <p>Политика приватности и безоппасности</p>
     </div>
 
 
