--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     <div class="copyright">
         <p>Copyright © 2019. Все права защищеныи и измененый</p>
         <p>Политика приватности и безоппасности</p>
+        БвшмЮв
     </div>
 
 
